--- a/package.json
+++ b/package.json
@@ -8,13 +8,28 @@
 	},
 	"dependencies": {
 		"react": "15.4.2",
-		"react-native": "^0.42.0"
+		"react-native": "^0.42.0",
+    "lodash": "^4.14.1",
+    "moment": "^2.15.2",
+    "react-native-device-info": "0.9.6",
+    "react-native-keyboard-spacer": "^0.3.1",
+    "react-native-linear-gradient": "^2.0.0",
+    "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-storage": "^4.0.1",
+    "redux-storage-decorator-filter": "^1.1.6",
+    "redux-storage-engine-reactnativeasyncstorage": "^1.0.1",
+    "redux-thunk": "^2.1.0"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
 		"jest": "19.0.2",
-		"react-test-renderer": "15.4.2"
+		"react-test-renderer": "15.4.2",
+		"eslint": "^3.4.0",
+    "eslint-config-lagetse": "^1.1.0",
+    "eslint-friendly-formatter": "^2.0.6"
 	},
 	"jest": {
 		"preset": "react-native"
